Finish index.html content

--- a/style.css
+++ b/style.css
@@ -1,36 +1,38 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html, body {
-    font-family: "Roboto Slab", serif;
-    line-height: 1.7em;
+html,
+body {
+  font-family: "Roboto Slab", serif;
+  line-height: 1.7em;
 }
 
 a {
-    color: #333;
-    text-decoration: none;
-  }
+  color: #333;
+  text-decoration: none;
+}
 
- h1,
- h2,
- h3 {
-    padding-bottom: 20px;
-    margin-top: 0;
-    margin-bottom: 0.5rem;
-  }
+h1,
+h2,
+h3 {
+  padding-bottom: 20px;
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
 
-  p {
-    margin: 10px 0;
-  }
+p {
+  margin: 10px 0;
+}
 
-  .main-header {
-      display: flex;
-      flex-direction: column;
-      backgroundd: #1b1b32cc;
-      padding: 50px 10px;
-      text-align: center;
-      color: #ffffff;
-  }
+.main-header {
+  display: flex;
+  flex-direction: column;
+  background: #1b1b32cc;
+  padding: 50px 10px;
+  text-align: center;
+  color: #ffffff;
+}
+
