--- a/style.css
+++ b/style.css
@@ -27,12 +27,31 @@ p {
   margin: 10px 0;
 }
 
-.main-header {
+form {
+  background: #1b1b32cc;
+  width: 70%;
+  margin: 3rem auto;
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+}
+.main-header,
+.main-footer {
   display: flex;
   flex-direction: column;
   background: #1b1b32cc;
   padding: 50px 10px;
   text-align: center;
   color: #ffffff;
+}
+
+.main-header p {
+  font-size: 1.4rem;
+  margin-top: 0.8rem;
+}
+
+.wrapper {
+  max-width: 1120px;
+  margin: 0 auto;
 }
 
